<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tornillos</groupId>
  <artifactId>tornillosmax-v2</artifactId>
  <version>2.0.0</version>
  <packaging>jar</packaging>
  <name>TornillosMax v2 — Arquitectura N-Capas</name>

  <!--
    ╔══════════════════════════════════════════════════╗
    ║         ARQUITECTURA N-CAPAS                     ║
    ╠══════════════════════════════════════════════════╣
    ║  1. PRESENTACIÓN  →  com.tornillos.ui            ║
    ║     LoginFrame, MainFrame, panels/*, dialogs/*   ║
    ║                                                  ║
    ║  2. SERVICIO      →  com.tornillos.service       ║
    ║     AlertaService, SessionManager                ║
    ║                                                  ║
    ║  3. ACCESO A DATOS→  com.tornillos.dao           ║
    ║     *DAO (JDBC puro, sin ORM)                    ║
    ║                                                  ║
    ║  4. MODELO        →  com.tornillos.model         ║
    ║     Entidades de negocio (POJO)                  ║
    ║                                                  ║
    ║  5. INFRAESTRUCTURA→ com.tornillos.config        ║
    ║     DatabaseConfig, AppTheme                     ║
    ╚══════════════════════════════════════════════════╝
  -->

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.2</version>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.2</version>
    </dependency>
    <dependency>
    <groupId>com.sun.activation</groupId>
      <artifactId>javax.activation</artifactId>
      <version>1.2.0</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
          <archive>
            <manifest><mainClass>com.tornillos.App</mainClass></manifest>
          </archive>
          <finalName>TornillosMax-v2</finalName>
          <appendAssemblyId>false</appendAssemblyId>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals><goal>single</goal></goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
